src/objects/Utility_Service__c.object
<CustomObject>
    <description>AstrumCRM/AstrumPM - Each Property can have one or more Utility Service(s).  A Utility Service is primarily defined by the Meter ID and the Utility Company to which is connects.</description>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>&apos;pete&apos;</formula>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>After_Fixed_Costs__c</fullName>
        <label>After Fixed Costs ($)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>After_Rate_Code_Tier_Cap__c</fullName>
        <label>After Rate Code Tier Cap</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>After_Rate_Period_Consumption__c</fullName>
        <label>After Rate Period Consumption</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>After_Rate_Period_Percent_Consumption__c</fullName>
        <label>After Rate Period Percent Consumption</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>After_Tier_1_Consumption_kWh__c</fullName>
        <label>After Tier 1 Consumption (kWh)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>After_Tier_1_Cost__c</fullName>
        <label>After Tier 1 Cost ($)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>After_Tier_2_Consumption_kWh__c</fullName>
        <label>After Tier 2 Consumption (kWh)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>After_Tier_2_Cost__c</fullName>
        <label>After Tier 2 Cost ($)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>After_Tier_3_Consumption_kWh__c</fullName>
        <label>After Tier 3 Consumption (kWh)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>After_Tier_3_Cost__c</fullName>
        <label>After Tier 3 Cost ($)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>After_Total_Bill__c</fullName>
        <label>After Total Bill ($)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amperage__c</fullName>
        <label>Amperage</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Electricity_Consumption_kWh__c</fullName>
        <label>Annual Electricity Consumption (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Electricity_Consumption_kWh_frm__c</fullName>
        <formula>Monthly_Electric_Consumption_KWH_Jan__c 
+ Monthly_Electric_Consumption_KWH_Feb__c
+ Monthly_Electric_Consumption_KWH_Mar__c
+ Monthly_Electric_Consumption_KWH_Apr__c
+ Monthly_Electric_Consumption_KWH_May__c
+ Monthly_Electric_Consumption_KWH_Jun__c
+ Monthly_Electric_Consumption_KWH_Jul__c 
+ Monthly_Electric_Consumption_KWH_Aug__c
+ Monthly_Electric_Consumption_KWH_Sep__c
+ Monthly_Electric_Consumption_KWH_Oct__c
+ Monthly_Electric_Consumption_KWH_Nov__c
+ Monthly_Electric_Consumption_KWH_Dec__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Electricity Consumption (kWh)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Avoided_Rate_Astrum_SQ_k__c</fullName>
        <label>Average Avoided Rate (Astrum SQ) ($/kWh)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Avoided_Rate_Method_D__c</fullName>
        <formula>Utility_Company__r.Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Avoided Rate (Method D)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Avoided_Rate_NRG_SQ_kWh__c</fullName>
        <label>Average Avoided Rate (NRG SQ) ($/kWh)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Avoided_Rate_Sunnova_SQ_kWH__c</fullName>
        <label>Average Avoided Rate (Sunnova SQ)($/kWH)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Monthly_Bill__c</fullName>
        <formula>( Monthly_Electric_Bill_Jan__c 
+  Monthly_Electric_Bill_Feb__c
+  Monthly_Electric_Bill_Mar__c
+  Monthly_Electric_Bill_Apr__c
+  Monthly_Electric_Bill_May__c
+  Monthly_Electric_Bill_Jun__c
+  Monthly_Electric_Bill_Jul__c
+  Monthly_Electric_Bill_Aug__c
+  Monthly_Electric_Bill_Sep__c
+  Monthly_Electric_Bill_Oct__c
+  Monthly_Electric_Bill_Nov__c
+  Monthly_Electric_Bill_Dec__c) / 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Monthly Bill</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Before_First_Year_Avg_Price__c</fullName>
        <description>totalAnnualBeforeBill / totalAnnualProduction</description>
        <label>Before First Year Avg Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Before_Fixed_Costs__c</fullName>
        <label>Before Fixed Costs ($)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Before_Rate_Code_Tier_Cap__c</fullName>
        <label>Before Rate Code Tier Cap</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Before_Rate_Period_Consumption__c</fullName>
        <label>Before Rate Period Consumption</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Before_Rate_Period_Percent_Consumption__c</fullName>
        <label>Before Rate Period Percent Consumption</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Before_Tier_1_Consumption_kWh__c</fullName>
        <label>Before Tier 1 Consumption (kWh)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Before_Tier_1_Cost__c</fullName>
        <label>Before Tier 1 Cost ($)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Before_Tier_2_Consumption_kWh__c</fullName>
        <label>Before Tier 2 Consumption (kWh)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Before_Tier_2_Cost__c</fullName>
        <label>Before Tier 2 Cost ($)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Before_Tier_3_Consumption_kWh__c</fullName>
        <label>Before Tier 3 Consumption (kWh)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Before_Tier_3_Cost__c</fullName>
        <label>Before Tier 3 Cost ($)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Before_Total_Bill__c</fullName>
        <label>Before Total Bill ($)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumption_Profile__c</fullName>
        <label>Consumption Profile</label>
        <picklist>
            <picklistValues>
                <fullName>Average</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Mostly at Night</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mostly During Day</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Usage_Type__c</fullName>
        <label>Current Usage Type</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Custom_Utility_Rate_Applied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Utility Rate Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Utility_Rate_Set_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Custom Utility Rate Set By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Utility_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Electric_Vehicle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Electric Vehicle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Average_Monthly_Bill__c</fullName>
        <label>Estimated Average Monthly Bill</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Annual_Production_Ast_SQ_kWh__c</fullName>
        <label>Expected Annual Production (Ast SQ)(kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Annual_Production_NRG_SQ_kWH__c</fullName>
        <label>Expected Annual Production (NRG SQ)(kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Annual_Production_Sun_SQ_kWh__c</fullName>
        <label>Expected Annual Production (Sun SQ)(kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Year_Remaining_Rate__c</fullName>
        <label>First Year Remaining Rate</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Five_Year_Before_Bill_Cost__c</fullName>
        <description>See calculation in UtilityPricingProcessor</description>
        <label>Five Year Before Bill Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Five_Year_Bill_Savings__c</fullName>
        <description>Calculated based off the avoided utility rate and yearly production</description>
        <label>Five Year Bill Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Five_Year_Net_Bill_Cost__c</fullName>
        <description>See calculation in UtilityPricingProcessor</description>
        <label>Five Year Net Bill Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecasted_Add_Annual_Consumption_kWh__c</fullName>
        <formula>Forecasted_Add_Consumption_kWh_Jan__c 
+ Forecasted_Add_Consumption_kWh_Feb__c  
+ Forecasted_Add_Consumption_kWh_Mar__c  
+ Forecasted_Add_Consumption_kWh_Apr__c  
+ Forecasted_Add_Consumption_kWh_May__c  
+ Forecasted_Add_Consumption_kWh_Jun__c  
+ Forecasted_Add_Consumption_kWh_Jul__c  
+ Forecasted_Add_Consumption_kWh_Aug__c  
+ Forecasted_Add_Consumption_kWh_Sep__c  
+ Forecasted_Add_Consumption_kWh_Oct__c  
+ Forecasted_Add_Consumption_kWh_Nov__c  
+ Forecasted_Add_Consumption_kWh_Dec__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecasted Add. Annual Consumption (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecasted_Add_Consumption_kWh_Apr__c</fullName>
        <label>Forecasted Add. Consumption(kWh) Apr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecasted_Add_Consumption_kWh_Aug__c</fullName>
        <label>Forecasted Add. Consumption(kWh) Aug</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecasted_Add_Consumption_kWh_Dec__c</fullName>
        <label>Forecasted Add. Consumption(kWh) Dec</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecasted_Add_Consumption_kWh_Feb__c</fullName>
        <label>Forecasted Add. Consumption(kWh) Feb</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecasted_Add_Consumption_kWh_Jan__c</fullName>
        <label>Forecasted Add. Consumption(kWh) Jan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecasted_Add_Consumption_kWh_Jul__c</fullName>
        <label>Forecasted Add. Consumption(kWh) Jul</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecasted_Add_Consumption_kWh_Jun__c</fullName>
        <label>Forecasted Add. Consumption(kWh) Jun</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecasted_Add_Consumption_kWh_Mar__c</fullName>
        <label>Forecasted Add. Consumption(kWh) Mar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecasted_Add_Consumption_kWh_May__c</fullName>
        <label>Forecasted Add. Consumption(kWh) May</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecasted_Add_Consumption_kWh_Nov__c</fullName>
        <label>Forecasted Add. Consumption(kWh) Nov</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecasted_Add_Consumption_kWh_Oct__c</fullName>
        <label>Forecasted Add. Consumption(kWh) Oct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecasted_Add_Consumption_kWh_Sep__c</fullName>
        <label>Forecasted Add. Consumption(kWh) Sep</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_Utility_Company__c</fullName>
        <formula>IF(NOT( ISNULL( Utility_Company__c) ),&apos;true&apos;,&apos;false&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Utility Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Monthly_Bill__c</fullName>
        <formula>AND(Monthly_Electric_Bill_Apr__c &gt; 0,Monthly_Electric_Bill_Jan__c &gt; 0, Monthly_Electric_Bill_Feb__c &gt; 0, Monthly_Electric_Bill_Mar__c &gt; 0, Monthly_Electric_Bill_May__c &gt; 0, Monthly_Electric_Bill_Jun__c &gt; 0,Monthly_Electric_Bill_Jul__c &gt; 0,Monthly_Electric_Bill_Aug__c &gt;0,Monthly_Electric_Bill_Sep__c &gt;0 ,Monthly_Electric_Bill_Oct__c &gt;0 ,Monthly_Electric_Bill_Nov__c &gt; 0,Monthly_Electric_Bill_Dec__c &gt; 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Monthly Bill ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Monthly_KWH__c</fullName>
        <formula>AND( Monthly_Electric_Consumption_KWH_Apr__c &gt; 0,
Monthly_Electric_Consumption_KWH_Jan__c &gt; 0,
Monthly_Electric_Consumption_KWH_Feb__c &gt; 0,
Monthly_Electric_Consumption_KWH_Mar__c &gt; 0,
Monthly_Electric_Consumption_KWH_Dec__c &gt; 0,
Monthly_Electric_Consumption_KWH_May__c &gt; 0,
Monthly_Electric_Consumption_KWH_Jun__c &gt; 0,
Monthly_Electric_Consumption_KWH_Jul__c &gt; 0,
Monthly_Electric_Consumption_KWH_Aug__c &gt; 0,
Monthly_Electric_Consumption_KWH_Sep__c &gt; 0,
Monthly_Electric_Consumption_KWH_Oct__c &gt; 0,
Monthly_Electric_Consumption_KWH_Nov__c &gt; 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Monthly KWH ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Method_1_Annual_Prod_Credit__c</fullName>
        <label>Method 1 Annual Production Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Method_1_Avoided_Utility_Rate__c</fullName>
        <label>Method 1 Avoided Utility Rate ($)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Method_1_Billable_Consumption__c</fullName>
        <label>Method 1 Billable Consumption</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method_1_Creditable_Consumption__c</fullName>
        <label>Method 1 Creditable Consumption</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method_1_Fixed_Charges__c</fullName>
        <label>Method 1 Fixed Charges</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method_1_Monthly_Bill_Credit__c</fullName>
        <label>Method 1 Monthly Bill Credit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method_1_Monthly_Credit_Carry_Forward__c</fullName>
        <label>Method 1 Monthly Credit Carry Forward</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method_1_Monthly_Creditable_Amount__c</fullName>
        <label>Method 1 Monthly Creditable Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method_1_Monthly_Production_Credit__c</fullName>
        <label>Method 1 Monthly Production Credit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method_1_Monthly_Variable_Cost__c</fullName>
        <label>Method 1 Monthly Variable Cost</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method_1_Net_Bill__c</fullName>
        <inlineHelpText>Sum of Total Bill for all months + Annual Production Credit</inlineHelpText>
        <label>Method 1 Net Bill</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Method_1_Net_Savings__c</fullName>
        <label>Method 1 Net Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Method_1_Net_Variable_Bill__c</fullName>
        <label>Method 1 Net Variable Bill</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method_1_Positive_Consumption__c</fullName>
        <label>Method 1 Positive Consumption</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method_1_Production_kWh__c</fullName>
        <label>Method 1 Production kWh</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method_1_Total_Bill__c</fullName>
        <label>Method 1 Total Bill</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method_1_Total_Variable_Bill__c</fullName>
        <label>Method 1 Total Variable Bill</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method_1_Variable_Cost__c</fullName>
        <label>Method 1 Variable Cost</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method_2_Production_kWh__c</fullName>
        <label>Method 2 Production kWh</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method_3_Production_kWh__c</fullName>
        <label>Method 3 Production kWh</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Electric_Bill_Apr__c</fullName>
        <label>Monthly Electric Bill Apr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Electric_Bill_Aug__c</fullName>
        <label>Monthly Electric Bill Aug</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Electric_Bill_Dec__c</fullName>
        <label>Monthly Electric Bill Dec</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Electric_Bill_Feb__c</fullName>
        <label>Monthly Electric Bill Feb</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Electric_Bill_Jan__c</fullName>
        <label>Monthly Electric Bill Jan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Electric_Bill_Jul__c</fullName>
        <label>Monthly Electric Bill Jul</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Electric_Bill_Jun__c</fullName>
        <label>Monthly Electric Bill Jun</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Electric_Bill_Mar__c</fullName>
        <label>Monthly Electric Bill Mar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Electric_Bill_May__c</fullName>
        <label>Monthly Electric Bill May</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Electric_Bill_Nov__c</fullName>
        <label>Monthly Electric Bill Nov</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Electric_Bill_Oct__c</fullName>
        <label>Monthly Electric Bill Oct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Electric_Bill_Sep__c</fullName>
        <label>Monthly Electric Bill Sep</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Electric_Consumption_KWH_Apr__c</fullName>
        <label>Current Electric Consumption(KWH) Apr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Electric_Consumption_KWH_Aug__c</fullName>
        <label>Current Electric Consumption(KWH) Aug</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Electric_Consumption_KWH_Dec__c</fullName>
        <label>Current Electric Consumption(KWH) Dec</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Electric_Consumption_KWH_Feb__c</fullName>
        <label>Current Electric Consumption(KWH) Feb</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Electric_Consumption_KWH_Jan__c</fullName>
        <label>Current Electric Consumption(KWH) Jan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Electric_Consumption_KWH_Jul__c</fullName>
        <label>Current Electric Consumption(KWH) Jul</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Electric_Consumption_KWH_Jun__c</fullName>
        <label>Current Electric Consumption(KWH) Jun</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Electric_Consumption_KWH_Mar__c</fullName>
        <label>Current Electric Consumption(KWH) Mar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Electric_Consumption_KWH_May__c</fullName>
        <label>Current Electric Consumption(KWH) May</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Electric_Consumption_KWH_Nov__c</fullName>
        <label>Current Electric Consumption(KWH) Nov</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Electric_Consumption_KWH_Oct__c</fullName>
        <label>Current Electric Consumption(KWH) Oct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Electric_Consumption_KWH_Sep__c</fullName>
        <label>Current Electric Consumption(KWH) Sep</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Consumption__c</fullName>
        <label>Net Consumption</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_First_Year_Avg_Price__c</fullName>
        <description>totalAnnualNetBill / totalAnnualProduction</description>
        <label>Net First Year Avg Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Method_1_Rate_Period_Consumption__c</fullName>
        <label>Net Method 1 Rate Period Consumption</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Net_Method_1_Tier_Consumption__c</fullName>
        <label>Net Method 1 Tier Consumption</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Net_Method_1_Tier_Cost__c</fullName>
        <label>Net Method 1 Tier Cost</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Property_State__c</fullName>
        <formula>TEXT(Property__r.Property_State__c)</formula>
        <label>Property State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Utility Services</relationshipLabel>
        <relationshipName>Utility_Services</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Service_Account_Number__c</fullName>
        <externalId>true</externalId>
        <label>Service Account Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Entry_Type__c</fullName>
        <description>Location of service, either overhead or underground</description>
        <label>Service  Entry Type</label>
        <picklist>
            <picklistValues>
                <fullName>Overhead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underground</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Territory__c</fullName>
        <formula>Utility_Rate_Code_Before_Solar__r.Utility_Service_Territory__c</formula>
        <label>Service Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Voltage_Volts__c</fullName>
        <description>Voltage Rating of the Service in Volts</description>
        <inlineHelpText>Voltage Rating of the Service in Volts</inlineHelpText>
        <label>Service Voltage (Volts)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solar_Method_1_Rate_Period_Percent_Prod__c</fullName>
        <label>Solar Method 1 Rate Period Percent Prod</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Solar_Method_1_Rate_Period_Production__c</fullName>
        <label>Solar Method 1 Rate Period Production</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Solar_Method_1_Tier_1_Production_kWh__c</fullName>
        <label>Solar Method 1 Tier 1 Production (kWh)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solar_Method_1_Tier_1_Value__c</fullName>
        <label>Solar Method 1 Tier 1 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solar_Method_1_Tier_2_Production_kWh__c</fullName>
        <label>Solar Method 1 Tier 2 Production (kWh)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solar_Method_1_Tier_2_Value__c</fullName>
        <label>Solar Method 1 Tier 2 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solar_Method_1_Tier_3_Production_kWh__c</fullName>
        <label>Solar Method 1 Tier 3 Production (kWh)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solar_Method_1_Tier_3_Value__c</fullName>
        <label>Solar Method 1 Tier 3 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solar_Rate_Code_Tier_Cap__c</fullName>
        <label>Solar Rate Code Tier Cap</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Forecasted_Consumption_kWh_Apr__c</fullName>
        <formula>Monthly_Electric_Consumption_KWH_Apr__c +  Forecasted_Add_Consumption_kWh_Apr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Forecasted Consumption(kWh) Apr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Forecasted_Consumption_kWh_Aug__c</fullName>
        <formula>Monthly_Electric_Consumption_KWH_Aug__c +  Forecasted_Add_Consumption_kWh_Aug__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Forecasted Consumption(kWh) Aug</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Forecasted_Consumption_kWh_Dec__c</fullName>
        <formula>Monthly_Electric_Consumption_KWH_Dec__c +  Forecasted_Add_Consumption_kWh_Dec__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Forecasted Consumption(kWh) Dec</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Forecasted_Consumption_kWh_Feb__c</fullName>
        <formula>Monthly_Electric_Consumption_KWH_Feb__c +  Forecasted_Add_Consumption_kWh_Feb__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Forecasted Consumption(kWh) Feb</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Forecasted_Consumption_kWh_Jan__c</fullName>
        <formula>Monthly_Electric_Consumption_KWH_Jan__c +  Forecasted_Add_Consumption_kWh_Jan__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Forecasted Consumption(kWh) Jan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Forecasted_Consumption_kWh_Jul__c</fullName>
        <formula>Monthly_Electric_Consumption_KWH_Jul__c +  Forecasted_Add_Consumption_kWh_Jul__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Forecasted Consumption(kWh) Jul</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Forecasted_Consumption_kWh_Jun__c</fullName>
        <formula>Monthly_Electric_Consumption_KWH_Jun__c +  Forecasted_Add_Consumption_kWh_Jun__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Forecasted Consumption(kWh) Jun</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Forecasted_Consumption_kWh_Mar__c</fullName>
        <formula>Monthly_Electric_Consumption_KWH_Mar__c +  Forecasted_Add_Consumption_kWh_Mar__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Forecasted Consumption(kWh) Mar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Forecasted_Consumption_kWh_May__c</fullName>
        <formula>Monthly_Electric_Consumption_KWH_May__c +  Forecasted_Add_Consumption_kWh_May__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Forecasted Consumption(kWh) May</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>